@@ -33,6 +33,8 @@ Enhancements:
        run:       : +8x
     Also, a single scheduled function now consumes 1/3 of the memory.
 
+ * Issue #196: added callback for failed login attempt.
+
 Bugfixes:
 
  * Issue #156: data connection must be closed before sending 226/426 reply.
@@ -75,6 +77,7 @@ Major API changes since 0.6.0:
 
  * AbstractedFS root and cwd properties can now be set via setattr().
  * New CallLater class.
+ * New FTPHandler.on_login_failed(username, password) method.
 
 
 Version: 0.6.0 - Date: 2011-01-24
